Improving FeatureGenerator